// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-modal #render should render large modal 1`] = `
<gux-modal size="large">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <div class="gux-large gux-modal-container">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title"></slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button-slot>
      <button>
        Cancel
      </button>
    </gux-button-slot>
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render medium modal 1`] = `
<gux-modal size="medium">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <div class="gux-medium gux-modal-container">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title"></slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button-slot>
      <button>
        Cancel
      </button>
    </gux-button-slot>
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render modal with a specified initial focus element 1`] = `
<gux-modal initial-focus="#cancelButton">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <div class="gux-dynamic gux-modal-container">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title"></slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button id="cancelButton">
      <mock:shadow-root>
        <button class="gux-secondary" type="button">
          <slot></slot>
        </button>
      </mock:shadow-root>
      Cancel
    </gux-button>
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render modal with just left align buttons 1`] = `
<gux-modal size="small">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title"></slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button-slot>
      <button>
        Cancel
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render modal with just right align buttons 1`] = `
<gux-modal size="small">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title"></slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render modal without a title 1`] = `
<gux-modal size="large">
  <mock:shadow-root>
    <dialog>
      <div class="gux-large gux-modal-container">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button-slot>
      <button>
        Cancel
      </button>
    </gux-button-slot>
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render modal without buttons 1`] = `
<gux-modal size="small">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title"></slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer gux-no-buttons">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render small modal 1`] = `
<gux-modal size="small">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title"></slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button-slot>
      <button>
        Cancel
      </button>
    </gux-button-slot>
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render small modal by default 1`] = `
<gux-modal>
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <div class="gux-dynamic gux-modal-container">
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title"></slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content"></slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons"></slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons"></slot>
          </div>
        </div>
      </div>
    </dialog>
  </mock:shadow-root>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button-slot>
      <button>
        Cancel
      </button>
    </gux-button-slot>
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;
